  salesman (now m_salesman) private
* TravellingSalesman renamed private variables to conform with
  naming conventions
* Made field m_isSelectedForNextGeneration in Chromosome
  private
* MinimizeChange-example: added support for changed persistent
  representation thru evolved code
* Introduced new suite AllUtilTests
* Introduced new class PluginDiscovererTest
* Added several units tests
* Extended JGAP documentation

2.4
----------
* Made m_value (holding the allele) in Gene implementations
  private. Use getAllele and setAllele(Object) instead!
* Introduced new package org.jgap.impl.fitness for classes
  related to fitness functions
* Introduced new abstract base class org.jgap.JGAPTestCase.
  All test cases are now derived from this new class hosting
  commong logic
* Introduced new utility class org.jgap.util.NetworkKit
* Added new example: examples.chromInit.ChromosomeInit
  Shows how to initialize Chromosomes with different number
  of Gene's.
* Introduced test suite for examples
* Introduced new parameter in Configuration
  "keepPopulationSizeConstant" (along with getter and setter).
  This parameter is queries in Genotype.evolve() to ensure a
  fixed population size. Default for parameter ist TRUE!
* Improved Genotype.evolve()
* Introduced application data to BaseGene,
  see request 1226280
* Extended Gene interface according to request 1226280
* WeightedRouletteSelector now cares of FitnessEvaluator!
* Fixed a performance issue in SwappingMutationOperator
* Fixed bug in Chromosome.toString()
* Fixed bug in BestChromosomesSelector.operate() (index out
  of bounds in certain circumstances)
* Fixed bug in NumberGene.compareTo, see request 1227256
* Extended Chromosome.toString()
* Extended toString() of all Gene implementations
* GreedyCrossover: enhanced error message and fixed test case
* InversionOperator: fixed test cases
* Fitness Function: Made constant NO_FITNESS_VALUE public
* TSP example: eliminated design flaw with configuration
  object