@@ -1,0 +1,5 @@
+<html>
+  <body>
+    Showing how to use the Gene's energy attribute
+  </body>
+</html>
